tests/NormalTests/paczka1/small_fuzzy/53845463.err
Error in line 3: Aa4 S807 56,6
Error in line 8: 1ho S982 85,6
Error in line 2: LRygu S982 46,2
Error in line 6: Aa4 S662 43,2
Error in line 15: 5z00 S982 64,3
